style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
body {
    background-color: blueviolet;
    color: white;
    font-family: 'Balsamiq Sans', cursive, sans-serif;
    min-height: 100vh;
}
header, form {
    min-height: 20vh;
    display: flex;
    justify-content: center;
    align-items: center;
}
form input, form button {
    padding: 0.25rem;
    font-size: 2rem;
    border: none;
    background: white;
}
form button {
    color: blueviolet;
    background: white;
    cursor: pointer;
    transition: all 0.3s ease   ;
}
@media only screen and (max-width: 768px) {
    form input {
        width: 15rem;
    }
}
form button:hover {
    background:blueviolet;
    color: white;
}
.container {
    display: flex;
    justify-content: center;
    align-items: center;
}
.list {
    min-width: 30%;
    list-style: none;
}
.todo {
    margin: 0.5rem;
    background: white;
    color: black;
    font-size: 1.5rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
    transition: all 0.3s ease;
}
.todo li {
    flex: 1;
}
.delete-btn,.done-btn {
    color:white;
    border: none;
    padding: 1rem;
    cursor: pointer;
    font-size: 1rem;
}
.delete-btn {
    background:lightcoral;
}
.done-btn {
    background:lightgreen
}
.li-item {
    padding: 0rem 0.5rem;
}
.fa-trash, .fa-check {
    pointer-events: none;
}
.completed {
    text-decoration: line-through;
    opacity: 0.3;
}
.fall {
    /* transform: translateY(8rem) rotateZ(20deg); */
    opacity: 0;
}

select {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    outline: none;
    border: none;
}
.select {
    margin: 1rem;
    position: relative;
    overflow: hidden;
}
select {
    color: blueviolet;
    width: 10rem;
    cursor: pointer;
    padding: 1rem;
}
.select::after {
    content: "\25BC";
    position: absolute;
    background: blueviolet;
    top: 0;
    right: 0;
    padding: 1rem;
    pointer-events: none;
    transition: all 0.3s ease;
}

.select:hover::after {
    background: white;
    color: blueviolet;
}

.filtered-list {
    margin: 1rem;
    text-align: center;
}

